# Fastapi-SQLAlchemy

./: .gitignore  README.md  alembic.ini  items.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ad74ccb4a5ff_create_products_table.py
api/v1/: __init__.py
api/v1/products/: crud.py  dependicies.py  schemas.py  views.py
core/: config.py
models/: __init__.py  db_helper.py  product.py
users/: crud.py  schemas.py  views.py
