[tool.poetry]
name = "fastapi+sqlalchemy"
version = "0.1.0"
description = ""
authors = ["laba"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
pydantic = {extras = ["email"], version = "^2.10.2"}
black = "^24.10.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
